syntax = "proto3"; // .proto 파일에서 사용할 프로토콜 버전 지정 (proto3: 간결한 문법, JSON 변환 기능 제공)

package com.ryuneng.goldmarket.grpc;
option java_package = "com.ryuneng.goldmarket.grpc"; // 생성된 Java 클래스들이 속할 패키지 지정
option java_outer_classname = "AuthProto";           // 생성된 Java 파일의 외부 클래스 이름 지정
option java_multiple_files = true;                   // Java 코드 생성 시 각 메시지 타입마다 별도의 파일을 생성할지 여부

// service: gRPC에서 제공할 함수 호출의 인터페이스 정의
service AuthService {
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
}

// message: 클라이언트와 서버 간에 교환할 데이터 구조 정의
message AuthRequest { // 요청 객체
  string accessToken = 1; // 필드 이름: accessToken, 필드 타입: string, 필드 번호: 1
}

message AuthResponse { // 응답 객체
  bool success = 1;
  string email = 2;
}
